--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
 
 <%= render '/layouts/nav'%>
 
-<div class="container-fluid">
+<div class="container container-fluid">
+  <spanclass="notice"><%= notice %></span>
+  <span class="alert"><%= alert %></span>
+  
+  
  <%= yield %> 
   
 </div>
