--- a/app/views/layouts/_nav_user.html.erb
+++ b/app/views/layouts/_nav_user.html.erb
@@ -29,9 +29,9 @@
       </form>
         <li><a href="#">Tweet</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/profile">Profile</a></li>
+            <li><a href="/user/<%= current_user.username %>">Profile</a></li>
             <li><a href="#">Help</a></li>
             <li><%= link_to('Settings', edit_user_registration_path) %></li>
             <li role="separator" class="divider"></li>
