--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,18 +24,19 @@
     
     
     <div class="col-xs-6">
-        
-         <div class="panel panel-default">
-            
-            <div class="panel-body">
+              <% for @p in @posts  %>
+             <div class="panel panel-default">
                 
-                <p>Feed </p>
-                
+                <div class="panel-body">
+                    
+                    <p> <%= @p.content %> </p>
+                    
+                </div>
             </div>
+            
+            <% end %>
+    
         </div>
-        
-        
-    </div>
     
     
     <div class="col-xs-3">
